Avoid overlap of TOC

--- a/assets/styles/claris/_components_screen.sass
+++ b/assets/styles/claris/_components_screen.sass
@@ -748,7 +748,7 @@ html.content-above-header
 
   h2
     font-size: 100%
-    margin: 0 -1em
+    margin: 0 0 0 -1em
     padding: 0.25em 1em
     border-radius: 0.25em
     text-transform: uppercase
@@ -766,7 +766,7 @@ html.content-above-header
   li
     list-style-type: circle
     // padding: 0 0 0 0.5em
-    width: 100%
+    // width: 100%
     &::before
       content: none
     ul
